--- a/package.json
+++ b/package.json
@@ -19,13 +19,17 @@
     "axios": "^0.20.0",
     "react": "16.11.0",
     "react-native": "0.62.2",
+    "react-native-datepicker": "^1.7.2",
     "react-native-gesture-handler": "^1.8.0",
     "react-native-maps": "^0.27.1",
     "react-native-picker-select": "^8.0.2",
     "react-native-reanimated": "^1.13.1",
     "react-native-safe-area-context": "^3.1.8",
     "react-native-screens": "^2.11.0",
+    "react-native-splash-screen": "^3.2.0",
+    "react-native-tiny-toast": "^1.0.7",
     "react-native-vector-icons": "^7.1.0",
+    "react-via-cep": "^2.0.8",
     "styled-components": "^5.2.0"
   },
   "devDependencies": {
@@ -34,6 +38,7 @@
     "@react-native-community/eslint-config": "^1.0.0",
     "@types/jest": "^24.0.24",
     "@types/react-native": "^0.62.0",
+    "@types/react-native-datepicker": "^1.7.0",
     "@types/react-native-vector-icons": "^6.4.6",
     "@types/react-test-renderer": "16.9.2",
     "@types/styled-components": "^5.1.4",
