--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-native": "0.62.2",
     "react-native-datepicker": "^1.7.2",
     "react-native-gesture-handler": "^1.8.0",
+    "react-native-image-picker": "^2.3.4",
     "react-native-maps": "^0.27.1",
     "react-native-picker-select": "^8.0.2",
     "react-native-reanimated": "^1.13.1",
